# workpulse-hrms

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: android-apk.yml  desktop-build.yml
admin-panel/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
admin-panel/public/: manifest.json
admin-panel/src/app/: globals.css  layout.tsx  page.tsx
admin-panel/src/contexts/: AuthContext.tsx  SidebarContext.tsx
admin-panel/src/lib/: validation.ts
admin-panel/src/providers/: AppProviders.tsx
admin-panel/src/types/: database.ts
admin-panel/supabase/: config.toml
database/: .env.example  README.md  package.json  seed.sql
database/scripts/: create-test-users.sql  verify-trigger.sql
database/supabase/: config.toml  seed.sql
database/supabase/.temp/: linked-project.json  pooler-url  project-ref
database/supabase/migrations/: 20250608130000_initial_schema.sql  20250608140000_attendance_employee_policies.sql  20250608150000_branches_and_profile_management.sql  20250608160000_mobile_hr_features.sql  20250608170000_leave_approval_workflow.sql  20250614100000_employee_duty_hours.sql  (+7 more)
desktop-app/: offline.html  package-lock.json  package.json  splashscreen.html
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: commands.rs  lib.rs  main.rs  setup.rs
docs/: README.md
docs/architecture/: README.md
docs/verification/: auth-verification.md
mobile-app/: .env.example  .gitignore  ANDROID_LOCAL_BUILD.md  GITHUB_ACTIONS_BUILD.md  README.md  app.json  babel.config.js  eas.json  keystore.properties.example  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile-app/app/: _layout.tsx  index.tsx
mobile-app/plugins/: withAndroidLocalSigning.js  withDisableLint.js
scripts/: fetch-ci-logs.py  generate-desktop-icons.py  organize-desktop-assets.py  poll-ci-build.py  validate-yaml.py  verify-auth.mjs  verify-supabase.mjs
shared/duty-hours/: index.ts
shared/leave-validation/: index.test.ts  index.ts
(+158 files in other folders)
