[package]
name = "workpulse-hrms-desktop"
version = "1.0.0"
description = "WorkPulse HRMS Desktop App Wrapper"
authors = ["Abdul Manan"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workpulse_hrms_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
urlencoding = "2.1"
tokio = { version = "1", features = ["time"] }
